@@ -1,6 +1,5 @@
 #include <stdio.h>
 #include <iostream>
-#include <stdio.h>
 
 #include <gtest/gtest.h>
 
