@@ -3,4 +3,4 @@ cd /d %~dp0
 
 mkdir build
 cd build
-cmake -G "Visual Studio 10 2010" ..
+cmake ..
